k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web-app
spec:
  selector:
    app: todo-web-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
